--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <li><a href="#">Configuração de Perfil</a></li>
             </ul>
         </nav>
+        <div class="text-map">
+            Localize no mapa um hospital próximo. 
+        </div> <br>
+        <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15111.308548515542!2d-44.42761960229925!3d-18.761256850819123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospital!5e0!3m2!1spt-BR!2sbr!4v1681907558630!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </header>
-    <main></main>
-    <div> 
-        <aside>
-
-        </aside>
-    </div>
     <script src="/mobile-navbar.js"></script>
 </body>
 </html>
